--- a/src/content/components/Keep/index.scss
+++ b/src/content/components/Keep/index.scss
@@ -2,7 +2,7 @@
 
 
 .div {
-    padding-right: 20px;
+    padding: 0 #{$paddingHorizontalKeep};
     position: fixed;
     right: 0;
     width: $widthKeep;
